feat: add env variable for minio image

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+MINIO_IMAGE=quay.io/minio/minio:latest
 MINIO_ROOT_USER=ROOTUSER
 MINIO_ROOT_PASSWORD=ROOTPASSWORD
 MINIO_DATA_DIRECTORY=~/minio/data
