feat: extract minio ports to env

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ MINIO_IMAGE=quay.io/minio/minio:latest
 MINIO_ROOT_USER=ROOTUSER
 MINIO_ROOT_PASSWORD=ROOTPASSWORD
 MINIO_DATA_DIRECTORY=~/minio/data
+MINIO_CONSOLE_PORT=9000
+MINIO_API_PORT=9090
