feat: add rabbitmq

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,7 @@ MINIO_ROOT_PASSWORD=ROOTPASSWORD
 MINIO_DATA_DIRECTORY=~/minio/data
 MINIO_CONSOLE_PORT=9000
 MINIO_API_PORT=9090
+
+RABBITMQ_DEFAULT_USER=guest
+RABBITMQ_DEFAULT_PASS=guest
+RABBITMQ_MANAGEMENT_PORT=15672
