feat: add credentials service and "api-gateway"

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,13 @@ RABBITMQ_DEFAULT_USER=guest
 RABBITMQ_DEFAULT_PASS=guest
 RABBITMQ_MANAGEMENT_PORT=15672
 RABBITMQ_PORT=5672
+
+MONGO_IMAGE=mongo
+MONGO_ROOT_USERNAME=root
+MONGO_ROOT_PASSWORD=root
+MONGO_DATA_DIRECTORY=~/mongo/data
+
+CREDENTIALS_MONGO_HOST=mongo
+CREDENTIALS_MONGO_PORT=27017
+CREDENTIALS_MONGO_USER=root
+CREDENTIALS_MONGO_PASSWORD=root
