--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,45 @@ version: "3"
 networks:
   storage: {}
   processing: {}
+  credentials: {}
 
 services:
+
+  api_gateway:
+    image: nginx:latest
+    restart: unless-stopped
+    ports:
+      - "8002:80"
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+    networks:
+      - credentials
+
+  credentials:
+    image: ghcr.io/nplettenberg/dataflow_credentials:v0.0.1
+    restart: unless-stopped
+    environment:
+      - MONGO_HOST=${CREDENTIALS_MONGO_HOST}
+      - MONGO_PORT=${CREDENTIALS_MONGO_PORT}
+      - MONGO_USERNAME=${CREDENTIALS_MONGO_USER}
+      - MONGO_PASSWORD=${CREDENTIALS_MONGO_PASSWORD}
+      - GIN_MODE=release
+    networks:
+      - credentials
+      - processing
+
+  mongo:
+    image: ${MONGO_IMAGE}
+    restart: unless-stopped
+    ports: 
+      - "27017:27017"
+    volumes:
+      - ${MONGO_DATA_DIRECTORY}:/data/db
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_ROOT_USERNAME}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_ROOT_PASSWORD}
+    networks:
+      - credentials
   
   minio:
     image: ${MINIO_IMAGE}
