chore: adapt newest changes

--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,6 @@ MONGO_ROOT_USERNAME=root
 MONGO_ROOT_PASSWORD=root
 MONGO_DATA_DIRECTORY=~/mongo/data
 
-CREDENTIALS_MONGO_HOST=mongo
-CREDENTIALS_MONGO_PORT=27017
-CREDENTIALS_MONGO_USER=root
-CREDENTIALS_MONGO_PASSWORD=root
+CREDENTIALS_MINIO_ENDPOINT=minio:9000
+CREDENTIALS_ACCESS_KEY=ROOTUSER
+CREDENTIALS_ACCESS_SECRET=ROOTPASSWORD
