--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
   api_gateway:
     image: nginx:latest
     restart: unless-stopped
+    depends_on:
+      - credentials
     ports:
       - "8002:80"
     volumes:
@@ -18,30 +20,18 @@ services:
       - credentials
 
   credentials:
-    image: ghcr.io/nplettenberg/dataflow_credentials:v0.0.3
+    image: ghcr.io/nplettenberg/dataflow_credentials:v.0.0.5
     restart: unless-stopped
+    depends_on:
+      - minio
     environment:
-      - MONGO_HOST=${CREDENTIALS_MONGO_HOST}
-      - MONGO_PORT=${CREDENTIALS_MONGO_PORT}
-      - MONGO_USERNAME=${CREDENTIALS_MONGO_USER}
-      - MONGO_PASSWORD=${CREDENTIALS_MONGO_PASSWORD}
+      - MINIO_ENDPOINT=${CREDENTIALS_MINIO_ENDPOINT}
+      - MINIO_ACCESS_KEY=${CREDENTIALS_ACCESS_KEY}
+      - MINIO_ACCESS_SECRET=${CREDENTIALS_ACCESS_SECRET}
       - GIN_MODE=release
     networks:
       - credentials
       - processing
-
-  mongo:
-    image: ${MONGO_IMAGE}
-    restart: unless-stopped
-    ports: 
-      - "27017:27017"
-    volumes:
-      - ${MONGO_DATA_DIRECTORY}:/data/db
-    environment:
-      - MONGO_INITDB_ROOT_USERNAME=${MONGO_ROOT_USERNAME}
-      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_ROOT_PASSWORD}
-    networks:
-      - credentials
   
   minio:
     image: ${MINIO_IMAGE}
@@ -57,6 +47,7 @@ services:
       - MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD}
     networks:
       - storage
+      - credentials
 
   rabbitmq:
     image: rabbitmq:3-management
