feat: add minio inftrastructure

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 .env
+infrastructure/.terraform
+infrastructure/terraform.tfstate
+infrastructure/terraform.tfstate.backup
+infrastructure/.terraform.lock.hcl
